--- a/css/look.css
+++ b/css/look.css
@@ -7,6 +7,10 @@ body {
     max-width: 100%;
 }
 
+#target-blocks {
+    height: 380px;
+}
+
 ul#target {
     width: 400px;  /* Must be here! */
     list-style: none;    
