--- a/css/look.css
+++ b/css/look.css
@@ -7,6 +7,37 @@ body {
     max-width: 100%;
 }
 
+#intro {
+    width: 90%;
+    text-align: center;
+    margin: 0px 0px 50px 0px;
+    /* box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14); */
+    padding-top: 0px;
+}
+
+#intro a {
+    text-decoration: none;
+    color: black;
+}
+
+#intro img, #intro h2, #intro p {
+    display: inline-block;
+}
+
+#intro h2, #intro p {
+    position: relative;
+    bottom: 10px;
+    right: 28.59px;
+}
+
+#intro p {
+    font-size: 12px;
+}
+
+#intro img {
+    width: 45px;
+}
+
 #target-blocks {
     height: 408px;
 }
@@ -29,8 +60,8 @@ ul#target li div {
 
 /* LEVELS */
 #levels-wrapper {
-    margin: 1% 0px 0px 200px;
-    width: 50%;
+    margin: 1% 0px 0px 50px;
+    width: 70%;
     background: #fff;
 }
 
@@ -120,6 +151,7 @@ ul#ranks-wrapper li p {
 #question {
     line-height: 15px;
     vertical-align: top;
+    margin-top: 52px;
 }
 
 #q-line-height {
