--- a/css/look.css
+++ b/css/look.css
@@ -8,11 +8,11 @@ body {
 }
 
 #intro {
-    width: 90%;
+    width: 84%;
     text-align: center;
-    margin: 0px 0px 50px 0px;
+    margin: 10px 0px 0px 0px;
     /* box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14); */
-    padding-top: 0px;
+    padding-right: 0px;
 }
 
 #intro a {
@@ -28,6 +28,7 @@ body {
     position: relative;
     bottom: 10px;
     right: 28.59px;
+    text-shadow: 22px 15px 5px rgba(0, 0, 0, 0.25);
 }
 
 #intro p {
@@ -44,18 +45,18 @@ body {
 
 ul#target {
     width: 400px;  /* Must be here! */
-    list-style: none;    
+    list-style: none;
 }
 
 ul#target li {
     display: inline-block;
     padding: 0px 2.5px 0px 2.5px;
+    z-index: 0;
 }
 
 ul#target li div {
     cursor: pointer;
     border-radius: 2px;
-    /* box-shadow: 22px 15px 17px rgba(0, 0, 0, 0.14); */
 }
 
 /* LEVELS */
