--- a/css/look.css
+++ b/css/look.css
@@ -70,6 +70,16 @@ ul#target li div {
     padding: 25px;
 }
 
+#history #score-history {
+    width: 100%;
+    font-size: 14px;
+}
+
+#history #score-history tr, #history #score-history td {
+    border: 1px solid #ddd;
+    padding: 1px;
+}
+
 /* LEVELS */
 #levels-wrapper {
     margin: 1% 0px 0px 50px;
@@ -124,7 +134,6 @@ ul#ranks-wrapper li p {
 
 
 /* Score/Fault and Time */
-
 .score-fault-output {
     font-size: 35px;
 }
@@ -137,6 +146,7 @@ ul#ranks-wrapper li p {
     width: 45px;
     text-align: center;
     border-radius: 50%;
+    margin-left: 12px;
 }
 
 #score, #scorePlus {
