--- a/css/look.css
+++ b/css/look.css
@@ -5,6 +5,17 @@ body {
     letter-spacing: 0px;
     background: #fff;
     max-width: 100%;
+    max-height: 100%;
+}
+
+a {
+    text-decoration: underline;
+    color: #000000;
+}
+
+a:active {
+    text-decoration: underline;
+    color: #bc3315;
 }
 
 #intro {
@@ -107,6 +118,12 @@ ul#target li div {
 	top:1px;
 }
 
+#clear-history {
+    font-size: 12px;
+    margin: -7px auto;
+    text-align: center;
+}
+
 #history {
     display: none;
     width: 400px;
@@ -115,7 +132,7 @@ ul#target li div {
 
 #history #quotes {    
     font-size: 14px;
-    /* padding: 25px; */
+    padding: 0px 25px 0px 25px;
 }
 
 #history #score-history {
@@ -259,11 +276,37 @@ ul#ranks-wrapper li p {
 
 /* Layout styling */
 #big-boss {
-    height: auto;
+    height: 900px;
     margin: 0px auto;
     width: 1000px;
 }
 
 #question, #target-blocks, #details {
     display: inline-block;
+}
+
+#footer {
+    font-size: 12px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    opacity: 0.9;
+    line-height: 0px;
+}
+
+#footer p, #footer a {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+#github-link {
+    opacity: 0.8;
+    width: 81px;
+    position: relative;
+    right: 29px;
+}
+
+#github-link:hover {
+    opacity: 0.5;
 }
