--- a/css/look.css
+++ b/css/look.css
@@ -118,6 +118,7 @@ ul#target li div {
 }
 
 #clear-history {
+    width: 60px;
     font-size: 12px;
     margin: -7px auto;
     text-align: center;
